--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -1,21 +1,52 @@
 {%- assign syllabus = site.data.syllabi | where: 'id', site.syllabus-id | first %}
 {%- assign institute = site.data.institutes | where: 'id', syllabus.programme.institute | first %}
 {%- assign department = institute.departments | where: 'id', syllabus.programme.department | first %}
-<!-- SEO -->
-{%- capture page-title %}{{ syllabus.title.long }}{% endcapture %}
-{%- capture page-subdomain %}{{ department.name | map: syllabus.lang }}{% endcapture %}
-{%- capture page-domain %}{{ institute.name | map: syllabus.lang }}{% endcapture %}
-{%- capture page-description %}Theme voor Syllabi Arteveldehogeschool{% endcapture %}
-{%- capture page-keywords %}AHS, GDM, Jekyll, Theme, SASS{% endcapture %}
-{%- capture page-author %}{{ department.name | map: syllabus.lang }}{% endcapture -%}
-{%- capture page-copyright %}{{ institute.name | map: syllabus.lang }}{% endcapture %}
-{%- if page.title %}{% capture page-title %}{{ site.title | strip_html }}{% endcapture %}{% endif %}
-{%- if page.subdomain %}{% capture page-subdomain %}{{ site.subdomain | strip_html }}{% endcapture %}{% endif %}
-{%- if page.domain %}{% capture page-domain %}{{ site.domain | strip_html }}{% endcapture %}{% endif %}
-{%- if page.description %}{% capture page-description %}{{ site.description | strip_html }}{% endcapture %}{% endif %}
-{%- if page.keywords %}{% capture page-keywords %}{{ site.keywords | strip_html }}{% endcapture %}{% endif %}
-{%- if page.author %}{% capture page-author %}{{ site.author | strip_html }}{% endcapture %}{% endif %}
-{%- if page.copyright %}{% capture page-copyright %}{{ site.copyright | strip_html }}{% endcapture %}{% endif %}
+<!-- SEO: title -->
+{%- if page.title %}
+  {%- capture page-title %}{{ page.title | strip_html }}{%- endcapture %}
+{%- elsif site.title %}
+  {%- capture page-title %}{{ site.title | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-title %}{{ syllabus.title.long }}{%- endcapture %}
+{%- endif %}
+<!-- SEO: subdomain -->
+{%- if site.subdomain %}
+  {%- capture page-subdomain %}{{ site.subdomain | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-subdomain %}{{ department.name | map: syllabus.lang }}{%- endcapture %}
+{%- endif %}
+<!-- SEO: domain -->
+{%- if site.domain %}
+  {%- capture page-domain %}{{ site.domain | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-domain %}{{ institute.name | map: syllabus.lang }}{%- endcapture %}
+{%- endif %}
+<!-- SEO: description -->
+{%- if page.description %}
+  {%- capture page-description %}{{ page.description | strip_html }}{%- endcapture %}
+{%- elsif site.description %}
+  {%- capture page-description %}{{ site.description | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-description %}Theme voor Syllabi Arteveldehogeschool{%- endcapture %}
+{%- endif %}
+<!-- SEO: keywords -->
+{%- if page.keywords %}
+  {%- capture page-keywords %}{{ page.keywords | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-keywords %}{{ site.keywords | strip_html }}{%- endcapture %}
+{%- endif %}
+<!-- SEO: author -->
+{%- if page.author %}
+  {%- capture page-author %}{{ page.author | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-author %}{{ site.author | strip_html }}{%- endcapture %}
+{%- endif %}
+<!-- SEO: copyright -->
+{%- if page.copyright %}
+  {%- capture page-copyright %}{{ page.copyright | strip_html }}{%- endcapture %}
+{%- else %}
+  {%- capture page-copyright %}{{ site.copyright | strip_html }}{%- endcapture %}
+{%- endif %}
 <head>
     <!-- Character set -->
     <meta charset="utf-8">
@@ -32,7 +63,7 @@
     <link rel="author" type="text/plain" href="{{ 'humans.txt' | absolute_url }}">
     <!-- OpenGraph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ pag-title }}">
+    <meta property="og:title" content="{{ page-title }}">
     <meta property="og:description" content="{{ page-description }}">
     <meta property="og:url" content="{{ '' | absolute_url }}">
     <meta property="og:site_name" content="gdm.gent">
