--- a/_sass/core/_base.scss
+++ b/_sass/core/_base.scss
@@ -1,7 +1,31 @@
-/*
-Reset some styles
-*/
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background: $base-background-color;
+  .hidden {
+    display: none;
+  }
+}
+
+abbr[title] {
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  cursor: help;
+  text-decoration: none;
+}
+
+::selection,
+::-moz-selection {
+   background: ahs-color-palette('ahs-fuchsia', 'mid-light');
+   color: white;
+   text-shadow: none;
+}
+
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
