--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,13 @@
 @charset "utf-8";
 
 // 1. Abstracts
-@import 
-  'abstracts/variables';
+@import 'abstracts/module';
+
+// 2. Core
+@import 'core/module';
+
+// 3. Layout
+@import 'layout/module';
+
+// 6. Vendors
+@import 'vendors/module'
