Rename content-navigation to content__navigation and add CSS for content__navigation

--- a/_layouts/syllabus-content-page.html
+++ b/_layouts/syllabus-content-page.html
@@ -44,7 +44,7 @@ scripts:
     <div class="row">
       <div class="col-12">
         <div class="row content__meta">
-          <div class="content-navigation">
+          <div class="content__navigation">
               
           </div>
           <div class="reading">
