--- a/_sass/layout/_content.scss
+++ b/_sass/layout/_content.scss
@@ -67,4 +67,18 @@
       padding: .05rem .2rem;
     }
   }
+  &__navigation {
+    ol li {display:block;} /* hide original list counter */
+    ol > li:first-child {counter-reset: item;} /* reset counter */
+    ol > li {counter-increment: item; position: relative;} /* increment counter */
+    ol > li:before {content:counters(item, ".") "";} /* print counter */
+    &-list {
+
+    }
+    &-item {
+      & > ul {
+        margin-left: 1em;
+      }
+    }
+  }
 }
